--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "ts-node": "^10.9.2",
@@ -19,6 +20,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "nodemon": "^3.0.3"
   }
 }
