--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.15.10",
+    "@mui/x-charts": "^6.19.4",
+    "@mui/x-data-grid": "^6.19.4",
     "@mui/x-data-grid-generator": "^6.19.2",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
