--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
