--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "pg": "^8.11.3",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
